--- a/cssgrid/mod4-projetoWildbeast/css/style.css
+++ b/cssgrid/mod4-projetoWildbeast/css/style.css
@@ -1,1 +1,111 @@
-img{max-width: 100px;}
+*{margin: 0; padding: 0; box-sizing: border-box;}
+html,body{height: 100%;}
+a{text-decoration: none;}
+li{list-style: none;}
+body{font-family: 'Volkhov', Georgia, serif;}
+
+/* img{max-width: 100px;} */
+
+/* GRID GERAL */
+
+.estrutura{
+    display: grid;
+    grid-template-columns: minmax(160px, 1fr) 3fr 300px;
+    grid-template-areas: 
+    "header header header"
+    "sidenav content anuncios"
+    "footer footer footer";
+}
+
+/* HEADER */
+
+.header{
+    grid-area: header;
+    background: linear-gradient(135deg, #8844ee,  #b07dfb);
+    padding: 30px;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+}
+
+header .logo{
+    max-width: 200px;
+}
+
+.header nav ul{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.header nav a{
+    display: block;
+    padding: 10px;
+    color: white;
+    font-size: 1.125em;
+    background: rgba(0,0,0,0.1);
+    border-radius: 5px;
+    transition: 0.2s;
+}
+
+.header nav a:hover{
+    background: rgba(0,0,0,0.5);
+}
+
+.header li + li{
+    margin-left: 20px;
+}
+
+
+/* SIDENAV */
+
+.sidenav{
+    grid-area: sidenav;
+    background: #fafbfc;
+    padding: 30px;
+}
+
+.sidenav li a{
+    display: block;
+    min-width: 60px;
+    max-width: 100px;
+    margin: 0 auto 30px auto;
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px 0px rgba(44,44,44,0.15);
+    transition: .2s;
+}
+
+.sidenav li a:hover{
+    background: #b07dfb;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.content{
+    grid-area: content;
+}
+
+.anuncios{
+    grid-area: anuncios;
+}
+
+.footer{
+    grid-area: footer;
+}
