--- a/cssgrid/mod4-projetoWildbeast/css/style.css
+++ b/cssgrid/mod4-projetoWildbeast/css/style.css
@@ -5,7 +5,6 @@ li{list-style: none;}
 body{font-family: 'Volkhov', Georgia, serif;}
 
 img {
-    max-width: 100%;
     width: 100%;
     border-radius: 5px;
     display: block;
@@ -178,6 +177,40 @@ p{
     top: 2px;
 }
 
+.destaque{
+    font-size: 0.875em;
+    color: #b07dfb;
+    max-width: 16em;
+}
+
+.citacao, .atributos{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px 0px rgba(44,44,44,0.15);
+    background: linear-gradient(135deg, #8844ee,  #b07dfb);
+    align-self: start;
+}
+
+.citacao p{
+    color: white;
+    font-size: 1.5em;
+    font-style: italic;
+    text-align: center;
+    max-width: 70%;
+    margin: 0 auto;
+}
+
+.atributos li{
+    color: white;
+    font-family: Courier, monospace;
+    font-size: 1.2em;
+    padding: 15px;
+}
+
+.atributos li + li {
+    border-top: 2px solid #b07dfb;
+}
+
 
 
 
@@ -215,4 +248,8 @@ p{
     background: linear-gradient(135deg, #8844ee, #b07dfb);
     text-align: center;
     padding: 30px;
+}
+
+.footer p{
+    color: white;
 }
