--- a/cssgrid/mod4-projetoWildbeast/css/style.css
+++ b/cssgrid/mod4-projetoWildbeast/css/style.css
@@ -21,6 +21,29 @@ img {
     "footer footer footer";
 }
 
+@media (max-width: 1200px){
+    .estrutura{
+        grid-template-areas: 
+        "header     header      header"
+        "sidenav    content     content"
+        "sidenav    anuncios    anuncios"
+        "footer     footer      footer";
+    }
+}
+
+
+@media (max-width: 760px){
+    .estrutura{
+        grid-template-columns: 100%;
+        grid-template-areas: 
+        "header"
+        "sidenav"
+        "content"
+        "anuncios"
+        "footer";
+    }
+}
+
 /* HEADER */
 
 .header{
@@ -210,21 +233,6 @@ p{
 .atributos li + li {
     border-top: 2px solid #b07dfb;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
