--- a/cssgrid/mod4-projetoWildbeast/css/style.css
+++ b/cssgrid/mod4-projetoWildbeast/css/style.css
@@ -182,6 +182,12 @@ header .logo{
     align-self: end;
 }
 
+@media (max-width: 600px){
+    .content{
+        grid-template-columns: auto;
+    }
+}
+
 /* CONTENT ESTILO */
 
 p{
@@ -295,6 +301,20 @@ p{
     padding: 30px;
     gap: 30px;
 }
+
+@media (max-width: 1200px){
+    .anuncios{
+        display: flex;
+    }
+}
+
+@media (max-width: 600px){
+    .anuncios{
+        flex-direction: column;
+    }
+}
+
+
 
 
 /* FOOTER */
