--- a/css_avancado/brafé-1-puro/css/style.css
+++ b/css_avancado/brafé-1-puro/css/style.css
@@ -1,7 +1,9 @@
 *{margin:0;padding: 0;box-sizing: border-box;}
 html,body{height: 100%;font-family: Georgia,serif;color:#252525}
-.container{max-width: 80%;margin: 0 auto;}
+.container{max-width: 960px;margin: 0 auto;}
 .clear{clear: both;}
+.left{float: left;}
+.right{float: right;}
 /* MENU */
 
 .menu{
@@ -56,4 +58,48 @@ html,body{height: 100%;font-family: Georgia,serif;color:#252525}
 .intro p{
     font-size: 1.125em;
     font-style: italic;
+}
+
+/* SOBRE */
+
+.sobre{
+    padding: 60px 0;
+}
+
+.sobre h2{
+    text-align: center;
+    margin-bottom: 60px;
+    font-size: 2.25em;
+}
+
+.sobre-container{   
+}
+
+.sobre-item{
+    max-width: 460px;
+}
+
+.sobre-item img{
+    display: block;
+}
+
+.sobre-item h3{
+    background-color: #252525;
+    font-size: 2.25em;
+    color: #fff;
+    width: 220px;
+    text-align: center;
+    font-style: italic;
+    font-weight: lighter;
+    padding: 5px 0 10px 0;
+    position: relative;
+    top: -25px;
+}
+
+.sobre p{
+    text-align: center;
+    max-width: 460px;
+    margin: 0 auto;
+    font-style: italic;
+    font-size: 1.25em;
 }
