--- a/css_avancado/brafé-1-puro/css/style.css
+++ b/css_avancado/brafé-1-puro/css/style.css
@@ -72,8 +72,6 @@ html,body{height: 100%;font-family: Georgia,serif;color:#252525}
     font-size: 2.25em;
 }
 
-.sobre-container{   
-}
 
 .sobre-item{
     max-width: 460px;
@@ -99,7 +97,71 @@ html,body{height: 100%;font-family: Georgia,serif;color:#252525}
 .sobre p{
     text-align: center;
     max-width: 460px;
-    margin: 0 auto;
+    margin: 10px auto;
     font-style: italic;
     font-size: 1.25em;
+}
+
+/* PRODUTOS */
+
+.produtos{
+    padding:60px 0;
+    background-color: #e7e4d8;
+    border-top: 3px solid #d6d3c8;
+    border-bottom: 3px solid #d6d3c8;
+}
+
+.produtos-item{
+    width: 300px;
+    float: left;
+    margin: 10px;
+}   
+.produtos-item h2::before{
+    content: '';
+    display: block;
+    background-color: currentColor;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 20px auto;
+    border: 5px solid #e7e4d8;
+    box-shadow: 0 0 0 10px currentColor;
+}
+
+h2.produtos-paulista::before{
+    color: #492901;
+}
+
+h2.produtos-carioca::before{
+    color: #c17139;
+}
+
+h2.produtos-mineiro::before{
+    color: #d7a54d;
+}
+
+
+.produtos-item h2{
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 2.25em;
+}
+
+.produtos-item p{
+    font-size: 0.875em;
+    line-height: 1.4em;
+}
+
+.produtos a{
+    width: 180px;
+    border: 3px solid;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 1.125em;
+    margin: 20px auto 0 auto;
+    color: #252525;
+    font-weight: bold;
+    text-transform: uppercase;
 }
