--- a/css_avancado/brafé-1-puro/css/style.css
+++ b/css_avancado/brafé-1-puro/css/style.css
@@ -206,8 +206,72 @@ h2.produtos-mineiro::before{
     text-transform: uppercase;
 }
 
+/* Assine */
 
+.assine{
+    background-color: #e7e4d8;
+    padding: 30px 0;
+}
 
+.assine-info{
+    float: left;
+    width: 50%;
+}
+
+.assine-info h2{
+    font-size: 2.25em;
+}
+
+.assine-info p{
+    font-size: 1.5em;
+    font-style: italic;
+}
+
+.assine form{
+    float: right;
+    margin: 10px 0;
+}
+
+.assine form label{
+    display: none;
+}
+
+.assine form input{
+    background: none;
+    font-size: 1.5em;
+    padding:10px;
+    border: 3px solid #252525;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-style: italic;
+    float: left;
+}
+
+.assine form button{
+    font-size: 1.5em;
+    padding: 10px;
+    background-color: #252525;
+    border: 3px solid #252525;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-style: italic;
+    color: #fff;
+    cursor: pointer;
+}
+
+/* footer */
+
+.footer{
+    background-color: #d6d3c8;
+    padding: 40px 0;
+}
+
+.footer p{
+    float: left;
+    width: 50%;
+}
+
+.footer img{
+    float: right;
+}
 
 
 
