--- a/css_avancado/brafe-1-grid/css/style.css
+++ b/css_avancado/brafe-1-grid/css/style.css
@@ -23,12 +23,30 @@ img{
 
 .menu {
 	background: #252525;
+	padding: 10px 0;
+}
+
+.menu-nav ul{
+	float: right;
+}
+
+.menu-nav ul li{
+	display: inline-block;
 }
 
 .menu-nav a {
 	text-decoration: none;
 	color: #fff;
 	font-size: 1.125em;
+	display: block;
+	padding: 10px;
+}
+
+@media (max-width:739px){
+	.menu-nav a {
+		padding-left: 0px;
+		padding-right: 8px;
+	}
 }
 
 /* Intro */
@@ -37,6 +55,8 @@ img{
 	background: url('../img/bg-intro.jpg') no-repeat center center;
 	background-size: cover;
 	color: #fff;
+	padding: 150px 0;
+	text-align: center;
 }
 
 .intro h1 {
@@ -50,11 +70,19 @@ img{
 	width: 20px;
 	height: 4px;
 	background: #fff;
+	margin: 10px auto;
 }
 
 .intro p {
 	font-style: italic;
 	font-size: 1.125em;
+}
+
+@media (max-width:739px){
+	.intro {
+		padding: 60px 0;
+	}
+	
 }
 
 /* Sobre */
