--- a/css_avancado/brafe-1-flexbox/css/style.css
+++ b/css_avancado/brafe-1-flexbox/css/style.css
@@ -227,6 +227,12 @@ h2.produtos-mineiro::before {
 
 .assine {
 	background: #e7e4d8;
+	padding: 30px 0;
+}
+
+.assine-info{
+	flex: 1;
+	margin: 0 10px;
 }
 
 .assine-info h2 {
@@ -238,6 +244,14 @@ h2.produtos-mineiro::before {
 	font-style: italic;
 }
 
+.assine form{
+	flex: 1;
+	margin: 0 10px;
+	display: flex;
+	flex-wrap: wrap;
+	align-content: flex-start;
+}
+
 .assine form label {
 	display: none;
 }
@@ -245,28 +259,41 @@ h2.produtos-mineiro::before {
 .assine input {
 	border: 3px solid #252525;
 	background: none;
+	padding: 10px;
+	align-self: flex-start;
 	font-size: 1.5em;
 	font-style: italic;
 	font-family: Georgia, serif;
+	flex: 1;
 }
 
 .assine button {
 	background: #252525;
 	border: none;
+	align-self: flex-start;
 	font-family: Georgia, serif;
 	text-transform: uppercase;
 	font-size: 1.5em;
 	color: #fff;
 	cursor: pointer;
+	padding: 13px;
+	flex: 1;
 }
 
 /*Footer*/
 
 .footer {
 	background: #d6d3c8;
+	padding: 30px 0;
 }
 
 .footer p {
 	font-size: 1.125em;
 	line-height: 1.4em;
+	margin: 0 10px;
+	flex: 1;
+}
+
+.footer img{
+	margin: 0 10px;
 }
