--- a/css_avancado/brafe-1-flexbox/css/style.css
+++ b/css_avancado/brafe-1-flexbox/css/style.css
@@ -25,11 +25,22 @@ img{
 	max-width: 100%;
 }
 
+@media (max-width:739px){
+	.container{
+		max-width: 300px;
+		flex-direction: column;
+	}
+}
+
 /* Menu */
 
 .menu {
 	background: #252525;
 	padding: 15px 0;
+}
+
+.menu-logo{
+	margin: 0 10px;
 }
 
 .menu-nav{
@@ -53,7 +64,11 @@ img{
 	padding: 10px;
 }
 
-
+@media (max-width:739px){
+	.menu-logo{
+		margin: 10px auto;
+	}
+}
 
 /* Intro */
 
@@ -83,6 +98,12 @@ img{
 	font-style: italic;
 	font-size: 1.125em;
 	text-align: center;
+}
+
+@media (max-width:739px){
+	.intro{
+		padding: 40px 0;
+	}
 }
 
 /* Sobre */
@@ -122,6 +143,16 @@ img{
 	width: 460px;
 	margin: 0 auto;
 	text-align: center;
+}
+
+@media (max-width:739px){
+	.sobre-item{
+		margin: 0;
+	}
+
+	.sobre > p {
+		width: 300px;
+	}
 }
 
 /* Produtos */
@@ -187,6 +218,12 @@ h2.produtos-mineiro::before {
 	width: 220px;
 }
 
+@media (max-width:739px){
+	.produtos-item{
+		margin: 10px 0;
+	}
+}
+
 /* Locais */
 
 .locais{
@@ -221,6 +258,12 @@ h2.produtos-mineiro::before {
 	border: 3px solid;
 	color: #252525;
 	padding: 10px;
+}
+
+@media (max-width:739px){
+	.produtos-item{
+		margin: 10px 0;
+	}
 }
 
 /* Assine */
@@ -280,6 +323,16 @@ h2.produtos-mineiro::before {
 	flex: 1;
 }
 
+@media (max-width:739px){
+	.assine-info, .assine form{
+		margin: 10px 0;
+	}
+
+	.assine input{
+		width: 300px;
+	}
+}
+
 /*Footer*/
 
 .footer {
@@ -296,4 +349,14 @@ h2.produtos-mineiro::before {
 
 .footer img{
 	margin: 0 10px;
+}
+
+@media (max-width:739px){
+	.footer img,.footer p{
+		margin: 10px 0;
+	}
+
+	.footer img{
+		width: 50%;
+	}
 }
