--- a/css_avancado/brafe-1-bootstrap/css/style.css
+++ b/css_avancado/brafe-1-bootstrap/css/style.css
@@ -143,10 +143,18 @@ img{
 	background: #e7e4d8;
 	border-top: 3px solid #d6d3c8;
 	border-bottom: 3px solid #d6d3c8;
+	padding: 60px 0;
+}
+
+.produtos-item{
+	margin-bottom: 40px;
 }
 
 .produtos-item h2 {
 	font-size: 2.25em;
+	font-weight: bold;
+	margin-bottom: 20px;
+	text-align: center;
 }
 
 .produtos-item h2::before {
@@ -158,6 +166,8 @@ img{
 	border-radius: 50%;
 	border: 5px solid #e7e4d8;
 	box-shadow: 0 0 0 5px currentColor;
+	margin: 0 auto 20px auto;
+
 }
 
 h2.produtos-paulista::before {
@@ -175,6 +185,7 @@ h2.produtos-mineiro::before {
 .produtos-item p {
 	font-size: 0.875em;
 	line-height: 1.4em;
+	text-align: center;
 }
 
 .produtos-btn {
@@ -185,9 +196,21 @@ h2.produtos-mineiro::before {
 	font-size: 1.125em;
 	font-weight: bold;
 	text-transform: uppercase;
+	margin: 0 auto;
+	display: block;
+	width: 220px;
+	padding: 15px;
 }
 
 /* Locais */
+
+.locais{
+	padding: 60px 15px;
+}
+
+.locais-item{
+	margin-bottom: 60px;
+}
 
 .locais-item img{
 	width: 100%;
@@ -195,11 +218,14 @@ h2.produtos-mineiro::before {
 
 .locais-item h2 {
 	font-size: 2.25em;
+	font-weight: bold;
+	margin-bottom: 30px;
 }
 
 .locais-item p {
 	font-size: 1.125em;
 	line-height: 1.4em;
+	margin-bottom: 30px;
 }
 
 .locais-item a {
@@ -208,6 +234,8 @@ h2.produtos-mineiro::before {
 	text-decoration: none;
 	border: 3px solid;
 	color: #252525;
+	width: 220px;
+	padding: 15px;
 }
 
 /* Assine */
