--- a/javascript/mod3/0302-12_projeto-pt1/css/style.css
+++ b/javascript/mod3/0302-12_projeto-pt1/css/style.css
@@ -3,6 +3,10 @@ html, body{height: 100%;}
 img{display: block;max-width: 100%;}
 ul{list-style: none;}
 
+html.textoMaior{
+    font-size: 150%;
+}
+
 body{
     background: #faf6ed;
     color: #222;
