--- a/javascript/mod3/0302-12_projeto-pt1/css/style.css
+++ b/javascript/mod3/0302-12_projeto-pt1/css/style.css
@@ -68,6 +68,10 @@ body{
     overflow-y: scroll;
 }
 
+.animais-lista li{
+    cursor: pointer;
+}
+
 .animais-lista::-webkit-scrollbar{
     width: 18px;
 }
@@ -211,5 +215,25 @@ body{
 
     .copy p{
         margin-bottom: 0;
+    }
+}
+
+.js .js-tabcontent section{
+    display: none;
+}
+
+.js-tabcontent section.ativo{
+    display: block !important; 
+    animation: show .6s forwards;
+    
+}
+
+@keyframes show{
+    from{
+        opacity: 0;
+        transform: translate3d(-30px,0,0); 
+    }to{
+        opacity: 1;
+        transform: translate3d(0,0,0);
     }
 }
